test_programs/compile_failure/noirc_frontend_tests_duplicate_struct_field/src/main.nr

    pub struct Foo {
        x: i32,
        x: i32,
    }

    fn main() {}
    